modules/lwjgl/jemalloc/src/generated/java/org/lwjgl/system/jemalloc/JEmalloc.java

/*
 * Copyright LWJGL. All rights reserved.
 * License terms: https://www.lwjgl.org/license
 * MACHINE GENERATED FILE, DO NOT EDIT
 */
package org.lwjgl.system.jemalloc;

import org.jspecify.annotations.*;

import java.nio.*;

import org.lwjgl.*;

import org.lwjgl.system.*;

import static org.lwjgl.system.APIUtil.*;
import static org.lwjgl.system.Checks.*;
import static org.lwjgl.system.JNI.*;
import static org.lwjgl.system.MemoryStack.*;
import static org.lwjgl.system.MemoryUtil.*;

public class JEmalloc {

    private static final SharedLibrary JEMALLOC = Library.loadNative(JEmalloc.class, "org.lwjgl.jemalloc", Configuration.JEMALLOC_LIBRARY_NAME.get(Platform.mapLibraryNameBundled("jemalloc")), true);

    /** Contains the function pointers loaded from the jemalloc {@link SharedLibrary}. */
    public static final class Functions {

        private Functions() {}

        /** Function address. */
        public static final long
            malloc_message     = apiGetFunctionAddress(JEMALLOC, "je_malloc_message"),
            malloc             = apiGetFunctionAddress(JEMALLOC, "je_malloc"),
            calloc             = apiGetFunctionAddress(JEMALLOC, "je_calloc"),
            posix_memalign     = apiGetFunctionAddress(JEMALLOC, "je_posix_memalign"),
            aligned_alloc      = apiGetFunctionAddress(JEMALLOC, "je_aligned_alloc"),
            realloc            = apiGetFunctionAddress(JEMALLOC, "je_realloc"),
            free               = apiGetFunctionAddress(JEMALLOC, "je_free"),
            free_sized         = apiGetFunctionAddress(JEMALLOC, "je_free_sized"),
            free_aligned_sized = apiGetFunctionAddress(JEMALLOC, "je_free_aligned_sized"),
            mallocx            = apiGetFunctionAddress(JEMALLOC, "je_mallocx"),
            rallocx            = apiGetFunctionAddress(JEMALLOC, "je_rallocx"),
            xallocx            = apiGetFunctionAddress(JEMALLOC, "je_xallocx"),
            sallocx            = apiGetFunctionAddress(JEMALLOC, "je_sallocx"),
            dallocx            = apiGetFunctionAddress(JEMALLOC, "je_dallocx"),
            sdallocx           = apiGetFunctionAddress(JEMALLOC, "je_sdallocx"),
            nallocx            = apiGetFunctionAddress(JEMALLOC, "je_nallocx"),
            mallctl            = apiGetFunctionAddress(JEMALLOC, "je_mallctl"),
            mallctlnametomib   = apiGetFunctionAddress(JEMALLOC, "je_mallctlnametomib"),
            mallctlbymib       = apiGetFunctionAddress(JEMALLOC, "je_mallctlbymib"),
            malloc_stats_print = apiGetFunctionAddress(JEMALLOC, "je_malloc_stats_print"),
            malloc_usable_size = apiGetFunctionAddress(JEMALLOC, "je_malloc_usable_size");

    }

    /** Returns the jemalloc {@link SharedLibrary}. */
    public static SharedLibrary getLibrary() {
        return JEMALLOC;
    }

    public static final int
        JEMALLOC_VERSION_MAJOR  = 5,
        JEMALLOC_VERSION_MINOR  = 2,
        JEMALLOC_VERSION_BUGFIX = 1,
        JEMALLOC_VERSION_NREV   = 0;

    public static final String JEMALLOC_VERSION_GID = "ea6b3e973b477b8061e0076bb257dbd7f3faa756";

    public static final String JEMALLOC_VERSION = JEMALLOC_VERSION_MAJOR + "." + JEMALLOC_VERSION_MINOR + "." + JEMALLOC_VERSION_BUGFIX + "-" + JEMALLOC_VERSION_NREV + "-g" + JEMALLOC_VERSION_GID;

    public static final int
        MALLOCX_ZERO        = 0x40,
        MALLOCX_TCACHE_NONE = MALLOCX_TCACHE(-1);

    public static final int
        MALLCTL_ARENAS_ALL       = 0x1000,
        MALLCTL_ARENAS_DESTROYED = 0x1001;

    static {
        // Force jemalloc to initialize before anyone else uses it.
        // This avoids a dangerous race when the first jemalloc functions are called concurrently.
        if (Platform.get() == Platform.WINDOWS) {
            invokePV(invokePP(8L, apiGetFunctionAddress(JEMALLOC, "je_malloc")), apiGetFunctionAddress(JEMALLOC, "je_free"));
        }
    }

    protected JEmalloc() {
        throw new UnsupportedOperationException();
    }

    // --- [ je_malloc_message ] ---

    /** {@code void (*) (void *, char const *) * je_malloc_message(void)} */
    @NativeType("void (*) (void *, char const *) *")
    public static PointerBuffer je_malloc_message() {
        long __result = Functions.malloc_message;
        return memPointerBuffer(__result, 1);
    }

    // --- [ je_malloc ] ---

    /** {@code void * je_malloc(size_t size)} */
    public static long nje_malloc(long size) {
        long __functionAddress = Functions.malloc;
        return invokePP(size, __functionAddress);
    }

    /** {@code void * je_malloc(size_t size)} */
    @NativeType("void *")
    public static @Nullable ByteBuffer je_malloc(@NativeType("size_t") long size) {
        long __result = nje_malloc(size);
        return memByteBufferSafe(__result, (int)size);
    }

    // --- [ je_calloc ] ---

    /** {@code void * je_calloc(size_t num, size_t size)} */
    public static long nje_calloc(long num, long size) {
        long __functionAddress = Functions.calloc;
        return invokePPP(num, size, __functionAddress);
    }

    /** {@code void * je_calloc(size_t num, size_t size)} */
    @NativeType("void *")
    public static @Nullable ByteBuffer je_calloc(@NativeType("size_t") long num, @NativeType("size_t") long size) {
        long __result = nje_calloc(num, size);
        return memByteBufferSafe(__result, (int)num * (int)size);
    }

    // --- [ je_posix_memalign ] ---

    /** {@code int je_posix_memalign(void ** memptr, size_t alignment, size_t size)} */
    public static int nje_posix_memalign(long memptr, long alignment, long size) {
        long __functionAddress = Functions.posix_memalign;
        return invokePPPI(memptr, alignment, size, __functionAddress);
    }

    /** {@code int je_posix_memalign(void ** memptr, size_t alignment, size_t size)} */
    public static int je_posix_memalign(@NativeType("void **") PointerBuffer memptr, @NativeType("size_t") long alignment, @NativeType("size_t") long size) {
        if (CHECKS) {
            check(memptr, 1);
        }
        return nje_posix_memalign(memAddress(memptr), alignment, size);
    }

    // --- [ je_aligned_alloc ] ---

    /** {@code void * je_aligned_alloc(size_t alignment, size_t size)} */
    public static long nje_aligned_alloc(long alignment, long size) {
        long __functionAddress = Functions.aligned_alloc;
        return invokePPP(alignment, size, __functionAddress);
    }

    /** {@code void * je_aligned_alloc(size_t alignment, size_t size)} */
    @NativeType("void *")
    public static @Nullable ByteBuffer je_aligned_alloc(@NativeType("size_t") long alignment, @NativeType("size_t") long size) {
        long __result = nje_aligned_alloc(alignment, size);
        return memByteBufferSafe(__result, (int)size);
    }

    // --- [ je_realloc ] ---

    /** {@code void * je_realloc(void * ptr, size_t size)} */
    public static long nje_realloc(long ptr, long size) {
        long __functionAddress = Functions.realloc;
        return invokePPP(ptr, size, __functionAddress);
    }

    /** {@code void * je_realloc(void * ptr, size_t size)} */
    @NativeType("void *")
    public static @Nullable ByteBuffer je_realloc(@NativeType("void *") @Nullable ByteBuffer ptr, @NativeType("size_t") long size) {
        long __result = nje_realloc(memAddressSafe(ptr), size);
        return memByteBufferSafe(__result, (int)size);
    }

    // --- [ je_free ] ---

    /** {@code void je_free(void * ptr)} */
    public static void nje_free(long ptr) {
        long __functionAddress = Functions.free;
        invokePV(ptr, __functionAddress);
    }

    /** {@code void je_free(void * ptr)} */
    public static void je_free(@NativeType("void *") @Nullable ByteBuffer ptr) {
        nje_free(memAddressSafe(ptr));
    }

    /** {@code void je_free(void * ptr)} */
    public static void je_free(@NativeType("void *") @Nullable ShortBuffer ptr) {
        nje_free(memAddressSafe(ptr));
    }

    /** {@code void je_free(void * ptr)} */
    public static void je_free(@NativeType("void *") @Nullable IntBuffer ptr) {
        nje_free(memAddressSafe(ptr));
    }

    /** {@code void je_free(void * ptr)} */
    public static void je_free(@NativeType("void *") @Nullable LongBuffer ptr) {
        nje_free(memAddressSafe(ptr));
    }

    /** {@code void je_free(void * ptr)} */
    public static void je_free(@NativeType("void *") @Nullable FloatBuffer ptr) {
        nje_free(memAddressSafe(ptr));
    }

    /** {@code void je_free(void * ptr)} */
    public static void je_free(@NativeType("void *") @Nullable DoubleBuffer ptr) {
        nje_free(memAddressSafe(ptr));
    }

    /** {@code void je_free(void * ptr)} */
    public static void je_free(@NativeType("void *") @Nullable PointerBuffer ptr) {
        nje_free(memAddressSafe(ptr));
    }

    // --- [ je_free_sized ] ---

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void nje_free_sized(long ptr, long size) {
        long __functionAddress = Functions.free_sized;
        invokePPV(ptr, size, __functionAddress);
    }

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void je_free_sized(@NativeType("void *") @Nullable ByteBuffer ptr) {
        nje_free_sized(memAddressSafe(ptr), remainingSafe(ptr));
    }

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void je_free_sized(@NativeType("void *") @Nullable ShortBuffer ptr) {
        nje_free_sized(memAddressSafe(ptr), Integer.toUnsignedLong(remainingSafe(ptr)) << 1);
    }

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void je_free_sized(@NativeType("void *") @Nullable IntBuffer ptr) {
        nje_free_sized(memAddressSafe(ptr), Integer.toUnsignedLong(remainingSafe(ptr)) << 2);
    }

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void je_free_sized(@NativeType("void *") @Nullable LongBuffer ptr) {
        nje_free_sized(memAddressSafe(ptr), Integer.toUnsignedLong(remainingSafe(ptr)) << 3);
    }

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void je_free_sized(@NativeType("void *") @Nullable FloatBuffer ptr) {
        nje_free_sized(memAddressSafe(ptr), Integer.toUnsignedLong(remainingSafe(ptr)) << 2);
    }

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void je_free_sized(@NativeType("void *") @Nullable DoubleBuffer ptr) {
        nje_free_sized(memAddressSafe(ptr), Integer.toUnsignedLong(remainingSafe(ptr)) << 3);
    }

    /** {@code void je_free_sized(void * ptr, size_t size)} */
    public static void je_free_sized(@NativeType("void *") @Nullable PointerBuffer ptr) {
        nje_free_sized(memAddressSafe(ptr), Integer.toUnsignedLong(remainingSafe(ptr)) << POINTER_SHIFT);
    }

    // --- [ je_free_aligned_sized ] ---

    /** {@code void je_free_aligned_sized(void * ptr, size_t alignment, size_t size)} */
    public static void nje_free_aligned_sized(long ptr, long alignment, long size) {
        long __functionAddress = Functions.free_aligned_sized;
        invokePPPV(ptr, alignment, size, __functionAddress);
    }

    /** {@code void je_free_aligned_sized(void * ptr, size_t alignment, size_t size)} */
    public static void je_free_aligned_sized(@NativeType("void *") @Nullable ByteBuffer ptr, @NativeType("size_t") long alignment) {
        nje_free_aligned_sized(memAddressSafe(ptr), alignment, remainingSafe(ptr));
    }

    /** {@code void je_free_aligned_sized(void * ptr, size_t alignment, size_t size)} */
    public static void je_free_aligned_sized(@NativeType("void *") @Nullable ShortBuffer ptr, @NativeType("size_t") long alignment) {
        nje_free_aligned_sized(memAddressSafe(ptr), alignment, Integer.toUnsignedLong(remainingSafe(ptr)) << 1);
    }
